tests/miniJava/neg/006688_mutation.MiniJava
class java { public static void 0 ( String [ ] java ) { { } } }
